<resources>
    <string name="app_name">SlateTask</string>


    <!-- Labels -->
    <string name="label_create_geofence">Create Geofence</string>

    <!-- Hints -->
    <string name="hint_name">Wi-FI SSID</string>
    <string name="hint_latitude" formatted="false">Latitude (%3.1f\u00B0 to %3.1f\u00B0)</string>
    <string name="hint_longitude" formatted="false">Longitude (%4.1f\u00B0 to %4.1f\u00B0) </string>
    <string name="hint_radius" formatted="false">Radius (%3.2f to %3.1f km)</string>

    <string name="AreYouSure">Are you sure?</string>
    <string name="Yes">Yes</string>
    <string name="No">No</string>
    <string name="Add">Add</string>
    <string name="Cancel">Cancel</string>

    <string name="toast_validation">Please enter valid data for all fields</string>
    <string name="inside_in_area">INSIDE FENCED AREA NOW</string>
    <string name="not_inside_in_area">NOT INSIDE FENCED AREA NOW</string>

</resources>
